--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Geir Olafsson's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <img src="geir.PNG" alt="Geir Olafsson" class="profile-img">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Hi, I'm Geir Olafsson — a passionate coder skilled in Matlab, Python, and C.</p>
+    </header>
+    <section id="projects">
+        <h2>Featured Projects</h2>
+        <p>Explore some of my projects in Matlab, Python, and C. Click on the links below to view detailed project repositories.</p>
+        <ul>
+            <li><a href="https://github.com/geirolafsson88/Matlab">Matlab Projects</a></li>
+            <li><a href="https://github.com/geirolafsson88/Python">Python Projects</a></li>
+            <li><a href="https://github.com/geirolafsson88/C">C Projects</a></li>
+        </ul>
+    </section>
+    <footer>
+        <p>Contact me at <a href="mailto:geirolafsson88@gmail.com">geirolafsson88@gmail.com</a></p>
+    </footer>
 </body>
 </html>
